Just 1 Test Realy Working

--- a/.env.testing
+++ b/.env.testing
@@ -1,8 +1,8 @@
 APP_NAME=VirtualCard
 APP_ENV=testing
 APP_KEY=base64:YzxShgZy6SRTYUqkKfzeFLUlVCG/Xbo5So+aXFNdoQ4=
-APP_DEBUG=false
-APP_URL=devlab03.mshome.net/virtual-card
+APP_DEBUG=true
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
