--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
-APP_NAME=Laravel
-APP_ENV=local
+APP_NAME=VirtualCard
+APP_ENV=production
 APP_KEY=
-APP_DEBUG=true
+APP_DEBUG=false
+APP_HOSTNAME=your_host_name
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
@@ -9,11 +10,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=db
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=your_database_name
+DB_USERNAME=your_database_user
+DB_PASSWORD=your_laravel_db_password
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
