--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 /.phpunit.cache
 /node_modules
-/public/build
 /public/hot
+/public/img/qrcodes/*
+/public/img/avatars/*
 /public/storage
 /storage/*.key
 /vendor
