--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,45 +1,27 @@
 server {
+    listen 80;
+    index index.php;
+    root /var/www/virtual-card/public;
 
-  listen 80;
-  listen [::]:80;
-  server_name localhost 127.0.0.1;
-  return 301 https://$host$request_uri;
-}
+    client_max_body_size 51g;
+    client_body_buffer_size 512k;
+    client_body_in_file_only clean;
 
-server{
-  listen 443 ssl default_server;
-  listen [::]:443 ssl default_server;
+    location ~ \.php$ {
+        try_files $uri =404;
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass app:9000;
+        fastcgi_index index.php;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
+    }
 
-  ssl_certificate /etc/nginx/certificate/nginx-certificate.crt;
-  ssl_certificate_key /etc/nginx/certificate/nginx.key;
+    location / {
+        try_files $uri $uri/ /index.php?$query_string;
+        gzip_static on;
+    }
 
-  server_name localhost 127.0.0.1;
-
-  root /var/www/virtual-card/app/public;
-
-  index index.php index.html;
-
-  add_header X-Frame-Options "SAMEORIGIN";
-  add_header X-Content-Type-Options "nosniff";
-
-  charset utf-8;
-
-  location = /favicon.ico { access_log off; log_not_found off; }
-  location = /robots.txt  { access_log off; log_not_found off; }
-
-  error_page 404 /index.php;
-
-  location / {
-    try_files $uri $uri/ /index.php?$query_string;
-    autoindex on;
-  }
-
-  location ~ \.php$ {
-    fastcgi_pass unix:/var/run/php/php8.2-fpm.sock;
-    fastcgi_index index.php;
-    fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
-    include fastcgi_params;
-  }
-
-  location ~ /\.(?!well-known).* { deny all; }
+    error_log  /var/log/nginx/error.log;
+    access_log /var/log/nginx/access.log;
 }
