--- a/.env.testing
+++ b/.env.testing
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=devlabsql.mshome.net
+DB_HOST=*******
 DB_PORT=3306
 DB_DATABASE=db02
 DB_USERNAME=admin
-DB_PASSWORD=L@rd020*1
+DB_PASSWORD=*********
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
